samples/_failures_safe/1761041867_1e6120_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dbf096dd.c: In function ‘main’:
./samples/SAFE/__tmp_dbf096dd.c:170:15: error: expected ‘)’ at end of input
  170 |     if (strlen
      |        ~      ^
      |               )
./samples/SAFE/__tmp_dbf096dd.c:170:5: error: expected declaration or statement at end of input
  170 |     if (strlen
      |     ^~
